--- a/Evolution_Of_Phishing_Mails.tex
+++ b/Evolution_Of_Phishing_Mails.tex
@@ -53,7 +53,7 @@
     {\phantom{X}\\\centering \textbf{\Huge\inserttitle}\\\phantom{X}}
 \end{block}
 
-\rule[0cm]{\textwidth}{\mainRuleThickness}
+% \rule[0cm]{\textwidth}{\mainRuleThickness}
 
 \begin{block}{\centering \blockTitleSize Introduction}
     \begin{columns}[T]
